--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "build": "rollup -c",
     "dev": "node scripts/bundleAPI && rollup -c -w",
     "start": "sirv public --no-clear",
-    "vercel-dev" : "node scripts/bundleAPI.js && vercel dev --listen 5000"
+    "vercel-dev": "node scripts/bundleAPI.js && vercel dev --listen 5000"
   },
   "devDependencies": {
+    "@clerk/clerk-sdk-node": "^0.5.0",
     "@erickruano/clerk-svelte": "0.0.5",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-replace": "^3.0.0",
     "axios": "^0.21.1",
     "chota": "^0.8.0",
+    "cookies": "^0.8.0",
     "dotenv": "^10.0.0",
     "prisma": "^2.27.0",
     "qs": "^6.10.1",
