--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "postinstall": "node scripts/bundleAPI && npx prisma generate",
     "build": "rollup -c",
-    "dev": "node scripts/bundleAPI && rollup -c -w",
+    "dev": "node scripts/bundleAPI && node scripts/setEnv && rollup -c -w",
     "start": "sirv public --no-clear",
-    "vercel-dev": "node scripts/bundleAPI.js && vercel dev --listen 5000"
+    "vercel-dev": "node scripts/bundleAPI.js && node scripts/setEnv &&  vercel dev --listen 5000"
   },
   "devDependencies": {
     "@clerk/clerk-sdk-node": "^0.5.1",
